--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Go CI
 
 on:
   push:
@@ -7,19 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '>=1.20'
+          cache: true
 
-    - name: Build
-      run: go build -v ./...
+      - name: Ensure go.mod exists (init if missing)
+        run: |
+          if [ ! -f go.mod ]; then
+            echo "No go.mod found; initializing a temporary one for CI."
+            go mod init example.com/device-info
+          fi
+          go mod tidy
 
-    - name: Test
-      run: go test -v ./...
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
